--- a/src/app/Styles/posts.css
+++ b/src/app/Styles/posts.css
@@ -105,6 +105,7 @@
   font-size: 18px;
   font-weight: 500;
 }
+
 /* ==================================posts table =============================== */
 .posts-table-container {
   overflow-x: hidden;
@@ -356,6 +357,7 @@
   background: linear-gradient(45deg, #0057d9, #3a86ff);
   box-shadow: 0 6px 20px rgba(58, 134, 255, 0.7);
 }
+
 /* ========================== Responsive: Tablets & Smaller (≤1024px) ========================== */
 @media (max-width: 1024px) {
   .posts-wrapper {
@@ -400,6 +402,7 @@
     margin-left: 5px;
     margin-right: 5px;
     padding: 10px;
+    margin-top: 64px;
   }
 
   .carousel {
