--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;600;700&display=swap');
+
 :root {
   --body-bg: #131D4F;
   --text-color: #333;
