--- a/src/app/Styles/Home.css
+++ b/src/app/Styles/Home.css
@@ -1,17 +1,31 @@
+.home {
+  position: relative;
+  z-index: 1;
+  overflow: visible;
+}
+
+.categorybar {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: white;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: 2.5fr 2fr;
-  grid-template-rows: repeat(3, auto);
+  grid-template-rows: repeat(4, auto);
   gap: 10px;
   margin: 40px 100px;
 }
 
 .main-post {
-  grid-row: span 3;
+  grid-row: span 4;
   position: relative;
   border-radius: 8px;
   overflow: hidden;
-  height: 300px;
+  height: 400px;
+  cursor: pointer;
 }
 
 .main-image {
@@ -30,11 +44,13 @@
 }
 
 .main-title {
+  font-family: 'Anek Tamil', sans-serif;
   font-size: 18px;
   font-weight: bold;
 }
 
 .main-meta {
+  font-family: 'Noto Sans Tamil', sans-serif;
   font-size: 14px;
 }
 
@@ -44,6 +60,7 @@
   align-items: center;
   background: #f9f9f9;
   padding: 6px 8px;
+  cursor: pointer;
   border-radius: 8px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
@@ -54,6 +71,7 @@
 }
 
 .mini-title {
+  font-family: 'Anek Tamil', sans-serif;
   font-size: 13px;
   font-weight: 600;
   margin: 0;
@@ -66,6 +84,7 @@
 }
 
 .mini-meta {
+  font-family: 'Noto Sans Tamil', sans-serif;
   font-size: 12px;
   color: #666;
 }
@@ -83,13 +102,13 @@
 }
 
 .breakingnews-title {
+  font-family: 'Noto Sans Tamil', sans-serif;
   display: flex;
   align-items: center;
   gap: 10px;
   font-size: 24px;
   font-weight: bold;
-  margin: 30px 0 20px; /* 👈 30px top, 20px bottom */
-  /* OR use margin-top & margin-bottom separately if needed */
+  margin: 30px 0 20px;
 }
 
 .breakingnews-title::before {
@@ -106,6 +125,7 @@
   /* Main post + 2 columns for 6 cards */
   grid-template-rows: repeat(3, auto);
   gap: 10px;
+  margin-bottom: 10px;
 }
 
 /* Main Breaking Post */
@@ -119,6 +139,7 @@
   padding: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   height: 400px;
+  cursor: pointer;
 }
 
 .main-breaking img {
@@ -129,9 +150,10 @@
 }
 
 .main-breaking .title {
+  font-family: 'Anek Tamil', sans-serif;
   margin-top: 10px;
-  font-weight: bold;
-  font-size: 14px;
+  font-weight: 700;
+  font-size: 15px;
 }
 
 /* Breaking Cards: Image Left, Title Right */
@@ -143,6 +165,7 @@
   padding: 10px;
   border-radius: 6px;
   height: 120px;
+  cursor: pointer;
   box-sizing: border-box;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
@@ -155,6 +178,7 @@
 }
 
 .breaking-title {
+  font-family: 'Anek Tamil', sans-serif;
   font-size: 11px;
   font-weight: 700;
   text-align: left;
